@@ -15,7 +15,6 @@ import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.answerdigital.answerking.exception.util.GlobalErrorMessages.PRODUCTS_ALREADY_EXIST;
 import static com.answerdigital.answerking.exception.util.GlobalErrorMessages.PRODUCTS_ARE_RETIRED;
@@ -65,20 +64,20 @@ public class ProductService {
         return productsList
                 .stream()
                 .map(productMapper::convertProductEntityToProductResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ProductResponse updateProduct(final Long productId, final ProductRequest productRequest) {
-        productRepository.findById(productId)
-                .orElseThrow(() -> new NotFoundException(String.format(PRODUCTS_DO_NOT_EXIST, productId)));
-
+        final Product product = findById(productId);
+        
         if (productRepository.existsByNameAndIdIsNot(productRequest.name(), productId)) {
             throw new NameUnavailableException(String.format(PRODUCTS_ALREADY_EXIST, productRequest.name()));
         }
 
-        final Product updatedProduct = productMapper.updateRequestToProduct(findById(productId), productRequest);
-        final Product savedProduct = productRepository.save(updatedProduct);
-        return productMapper.convertProductEntityToProductResponse(savedProduct);
+        final Product updatedProduct = productMapper.updateRequestToProduct(product, productRequest);
+        return productMapper.convertProductEntityToProductResponse(
+            productRepository.save(updatedProduct)
+        );
     }
 
     public void retireProduct(final Long productId) {
@@ -87,13 +86,13 @@ public class ProductService {
             throw new RetirementException(String.format(PRODUCTS_ARE_RETIRED, productId));
         }
         product.setRetired(true);
-        final Product savedProduct = productRepository.save(product);
+        productRepository.save(product);
     }
 
     public List<ProductResponse> findProductsByCategoryId(final Long categoryId) {
         return productRepository.findProductsByCategoryId(categoryId)
                                 .stream()
-                                .map(product -> productMapper.convertProductEntityToProductResponse(product))
+                                .map(productMapper::convertProductEntityToProductResponse)
                                 .toList();
     }
 
